# franka_vla_ws

src/franka_vla_interfaces/: CMakeLists.txt  package.xml
src/franka_vla_interfaces/msg/: ActionChunk.msg
src/joint_impedance_controller/: CMakeLists.txt  controllers_plugin.xml  package.xml
src/joint_impedance_controller/include/joint_impedance_controller/: joint_impedance_controller.hpp  robot_utils.hpp
src/joint_impedance_controller/launch/: franka.launch.py
src/joint_impedance_controller/src/: joint_impedance_controller.cpp
src/move_to_start_controller/: CMakeLists.txt  controllers_plugin.xml  package.xml
src/move_to_start_controller/include/move_to_start_controller/: motion_generator.hpp  move_to_start_controller.hpp
src/move_to_start_controller/launch/: franka.launch.py
src/move_to_start_controller/src/: motion_generator.cpp  move_to_start_controller.cpp
src/vla_inference/: package.xml  setup.py
src/vla_inference/vla_inference/: publisher_member_function.py  subscriber_member_function.py  vla_inference_action.py
src/vla_joint_impedance_controller/: CMakeLists.txt  controllers_plugin.xml  package.xml
src/vla_joint_impedance_controller/include/vla_joint_impedance_controller/: vla_joint_impedance_controller.hpp
src/vla_joint_impedance_controller/launch/: franka.launch.py
src/vla_joint_impedance_controller/src/: action_subscriber_test.cpp  vla_joint_impedance_controller.cpp
